--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "phaser3-parcel-template",
   "version": "1.0.0",
   "description": "A typescript template project for Phaser 3 using Parceljs",
+  "source": "./index.html",
+  "browserslist": "> 0.25%, last 2 versions, not dead",
   "scripts": {
-    "start": "parcel src/index.html -p 8000",
-    "build": "parcel build src/index.html --out-dir dist",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
+    "dev": "parcel index.html --no-cache --config ./parcel/.parcel.dev --open",
+    "build": "parcel build index.html --public-url _relativeroute_ --no-source-maps --log-level error --config ./parcel/.parcel.prod"
   },
   "author": "supertommy",
   "license": "MIT",
@@ -16,23 +16,20 @@
   },
   "homepage": "https://github.com/ourcade/phaser3-parcel-template",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "eslint": "^6.8.0",
-    "minimist": ">=1.2.2",
-    "parcel-plugin-clean-easy": "^1.0.2",
-    "parcel-plugin-static-files-copy": "^2.4.3",
-    "typescript": "^3.8.3"
+    "@parcel/transformer-glsl": "^2.11.0",
+    "@parcel/transformer-typescript-tsc": "^2.11.0",
+    "express": "^4.18.2",
+    "parcel": "^2.11.0",
+    "parcel-reporter-clean-dist": "^1.0.4",
+    "parcel-reporter-static-files-copy": "^1.5.3",
+    "process": "^0.11.10",
+    "typescript": "5.4.5"
   },
   "dependencies": {
-    "bitecs": "^0.3.10-3",
-    "phaser": "^3.55.2"
+    "bitecs": "0.3.40",
+    "phaser": "3.80.1"
   },
-  "parcelCleanPaths": [
-    "dist"
-  ],
   "staticFiles": {
-    "staticPath": "public",
-    "watcherGlob": "**"
+    "staticPath": "public"
   }
 }
