--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@parcel/transformer-glsl": "^2.11.0",
     "@parcel/transformer-typescript-tsc": "^2.11.0",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^3.0.0",
     "parcel": "^2.11.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "parcel-reporter-static-files-copy": "^1.5.3",
@@ -27,7 +28,8 @@
   },
   "dependencies": {
     "bitecs": "0.3.40",
-    "phaser": "3.80.1"
+    "phaser": "3.80.1",
+    "socket.io-client": "^4.7.5"
   },
   "staticFiles": {
     "staticPath": "public"
