--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
   "devDependencies": {
     "@parcel/transformer-glsl": "^2.11.0",
     "@parcel/transformer-typescript-tsc": "^2.11.0",
+    "@types/matter-js": "^0.19.6",
     "express": "^4.18.2",
     "http-proxy-middleware": "^3.0.0",
+    "matter-js": "0.19.0",
     "parcel": "^2.11.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "parcel-reporter-static-files-copy": "^1.5.3",
